#13 폰트 재설정

--- a/app/src/main/res/layout/community_chat_item.xml
+++ b/app/src/main/res/layout/community_chat_item.xml
@@ -18,6 +18,7 @@
             android:text="TEN차트 '여름휴가를 같이 가고 싶은 남자가수' 1위가 차은우로 선정됐대요 여러분 ㅠㅠ.. 나도 같이 휴가가고 싶어지네요"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/pretendard_medium"
             android:textColor="@color/black"
             android:textSize="14sp"
             android:layout_marginBottom="10dp"
@@ -30,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/imy_text_gray"
+            android:fontFamily="@font/pretendard_medium"
             android:textSize="14sp"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintTop_toBottomOf="@+id/communityChatTxt"
