--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -41,6 +41,7 @@
                 android:backgroundTint="@color/myCelebPurple"
                 android:padding="14dp"
                 android:text="@{userQuestion}"
+                android:fontFamily="@font/pretendard"
                 android:hint="안녕하세요"
                 android:textStyle="bold"
                 android:textColor="@color/white"
@@ -75,6 +76,7 @@
                 android:backgroundTint="@color/white"
                 android:padding="14dp"
                 android:text="@{aiAnswer}"
+                android:fontFamily="@font/pretendard"
                 android:textColor="@color/myCelebTextBlack"
                 android:textStyle="bold"
                 android:textSize="14sp"
