--- a/app/src/main/res/layout/audio_book_item.xml
+++ b/app/src/main/res/layout/audio_book_item.xml
@@ -12,10 +12,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="20dp"
+        android:paddingTop="5dp"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
-        android:paddingBottom="10dp"
+        android:paddingBottom="5dp"
         android:background="#C6C9D0">
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -23,7 +23,9 @@
             android:text="@{script}"
             android:hint="대하여 어린이들에게 용서를 빈다."
             android:textColor="@color/white"
+            android:fontFamily="@font/pretendard"
             android:textSize="18sp"
+            android:lineBreakWordStyle="phrase"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
