--- a/app/src/main/res/layout/audio_home_item.xml
+++ b/app/src/main/res/layout/audio_home_item.xml
@@ -37,12 +37,14 @@
             android:id="@+id/audioBookName"
             android:text="@{title}"
             android:hint="1.천원돌파 그랜라간"
+            android:fontFamily="@font/pretendard"
+            android:textStyle="bold"
             android:textSize="15sp"
             android:textColor="@color/black"
-            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:maxLines="11"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/audioCardView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
