--- a/app/src/main/res/layout/fragment_audio_book.xml
+++ b/app/src/main/res/layout/fragment_audio_book.xml
@@ -50,6 +50,7 @@
                 android:layout_height="wrap_content"
                 android:text="@{audioBookName}"
                 android:hint="어린왕자"
+                android:fontFamily="@font/pretendard"
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 android:textStyle="bold"
@@ -66,6 +67,7 @@
                 android:text="@{audioBookAuthor}"
                 android:hint="저자: 생택쥐페리"
                 android:textColor="@color/white"
+                android:fontFamily="@font/pretendard"
                 android:textSize="12sp"
                 android:layout_marginStart="10dp"
                 app:layout_constraintVertical_bias="0"
