--- a/app/src/main/res/layout/fragment_audio_home.xml
+++ b/app/src/main/res/layout/fragment_audio_home.xml
@@ -24,6 +24,7 @@
             <TextView
                 android:id="@+id/audioHomeTxt1"
                 android:text="*추천 오디오"
+                android:fontFamily="@font/pretendard"
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:layout_marginStart="20dp"
@@ -39,6 +40,7 @@
                 android:id="@+id/audioHomeTxt2"
                 android:text="셀럽의 목소리로 마음의 안정 찾기"
                 android:textColor="@color/myCelebTextHint"
+                android:fontFamily="@font/pretendard"
                 android:textSize="15sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -76,6 +78,7 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/audioHomeTxt3"
                 android:text="인기 오디오북"
+                android:fontFamily="@font/pretendard"
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:layout_marginStart="20dp"
@@ -88,6 +91,7 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/audioHomeTxt4"
                 android:text="모두 보기"
+                android:fontFamily="@font/pretendard"
                 android:textSize="17sp"
                 android:textColor="@color/myCelebTextHint"
                 android:layout_marginEnd="20dp"
@@ -121,6 +125,7 @@
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/audioHomeTxt5"
                 android:text="높은 조회순"
+                android:fontFamily="@font/pretendard"
                 android:textSize="15sp"
                 android:textColor="@color/myCelebThinPink"
                 app:drawableTint="@color/myCelebThinPink"
