--- a/app/src/main/res/layout/fragment_community_home.xml
+++ b/app/src/main/res/layout/fragment_community_home.xml
@@ -25,6 +25,7 @@
             android:textSize="15sp"
             android:textColor="@color/white"
             android:textStyle="bold"
+            android:fontFamily="@font/pretendard_medium"
             app:layout_constraintVertical_bias="0"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,6 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/other_celeb2"
+            android:fontFamily="@font/pretendard_medium"
             android:layout_marginTop="5dp"
             app:layout_constraintTop_toBottomOf="@+id/communityTxt3"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -65,6 +67,7 @@
         android:text="*인기 커뮤니티"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:fontFamily="@font/pretendard_medium"
         android:layout_marginTop="20dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -91,7 +94,7 @@
         android:id="@+id/communityTxt2"
         android:text="높은 참여율순"
         android:textColor="@color/myCelebThinPink"
-        android:textStyle="bold"
+        android:fontFamily="@font/pretendard_medium"
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
