--- a/app/src/main/res/layout/fragment_select_celeb.xml
+++ b/app/src/main/res/layout/fragment_select_celeb.xml
@@ -32,6 +32,7 @@
             <TextView
                 android:id="@+id/tv1"
                 android:text="*어떤 셀럽을 가장 좋아하시나요?"
+                android:fontFamily="@font/pretendard_medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
@@ -45,11 +46,11 @@
             <TextView
                 android:id="@+id/tv2"
                 android:text="나만의 셀럽과 소통하면서 응원해 보세요."
+                android:fontFamily="@font/pretendard_medium"
                 android:textColor="@color/myCelebTextHint"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textSize="15sp"
+                android:textSize="14sp"
                 android:layout_marginTop="5dp"
                 app:layout_constraintTop_toBottomOf="@+id/tv1"
                 app:layout_constraintStart_toStartOf="parent"
@@ -81,6 +82,8 @@
 
                     <TextView
                         android:text="차은우"
+                        android:fontFamily="@font/pretendard_medium"
+                        android:layout_marginTop="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
                 </androidx.appcompat.widget.LinearLayoutCompat>
@@ -100,6 +103,8 @@
 
                     <TextView
                         android:text="정국"
+                        android:fontFamily="@font/pretendard_medium"
+                        android:layout_marginTop="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
                 </androidx.appcompat.widget.LinearLayoutCompat>
@@ -118,6 +123,8 @@
 
                     <TextView
                         android:text="뷔"
+                        android:fontFamily="@font/pretendard_medium"
+                        android:layout_marginTop="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
                 </androidx.appcompat.widget.LinearLayoutCompat>
@@ -136,6 +143,8 @@
 
                     <TextView
                         android:text="슈가"
+                        android:fontFamily="@font/pretendard_medium"
+                        android:layout_marginTop="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
                 </androidx.appcompat.widget.LinearLayoutCompat>
@@ -154,6 +163,8 @@
 
                     <TextView
                         android:text="예지"
+                        android:fontFamily="@font/pretendard_medium"
+                        android:layout_marginTop="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
                 </androidx.appcompat.widget.LinearLayoutCompat>
@@ -172,6 +183,8 @@
 
                     <TextView
                         android:text="유나"
+                        android:fontFamily="@font/pretendard_medium"
+                        android:layout_marginTop="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
                 </androidx.appcompat.widget.LinearLayoutCompat>
@@ -190,6 +203,8 @@
 
                     <TextView
                         android:text="민지"
+                        android:fontFamily="@font/pretendard_medium"
+                        android:layout_marginTop="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
                 </androidx.appcompat.widget.LinearLayoutCompat>
@@ -208,6 +223,8 @@
 
                     <TextView
                         android:text="하니"
+                        android:fontFamily="@font/pretendard_medium"
+                        android:layout_marginTop="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
                 </androidx.appcompat.widget.LinearLayoutCompat>
@@ -226,6 +243,8 @@
 
                     <TextView
                         android:text="다니엘"
+                        android:fontFamily="@font/pretendard_medium"
+                        android:layout_marginTop="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
                 </androidx.appcompat.widget.LinearLayoutCompat>
@@ -247,7 +266,8 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_search_shape"
                 android:text="선택완료"
-                android:textSize="20sp"
+                android:fontFamily="@font/pretendard_medium"
+                android:textSize="18sp"
                 android:textColor="@color/white"
                 android:backgroundTint="@color/myCelebHotPink"
                 android:layout_marginStart="50dp"
