--- a/app/src/main/res/layout/rank_item.xml
+++ b/app/src/main/res/layout/rank_item.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:textSize="21sp"
         android:text="1"
+        android:fontFamily="@font/pretendard"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -44,6 +45,7 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:text="정국"
+            android:fontFamily="@font/pretendard"
             android:textSize="18sp"
             android:textStyle="bold"
             android:layout_width="wrap_content"
@@ -52,6 +54,7 @@
         <androidx.appcompat.widget.AppCompatTextView
             android:text="#빌보드 #INFP #솔로"
             android:textSize="15sp"
+            android:fontFamily="@font/pretendard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </androidx.appcompat.widget.LinearLayoutCompat>
@@ -59,7 +62,8 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/rankItemVariance"
         android:text="1"
-        android:textSize="21sp"
+        android:textSize="18sp"
+        android:fontFamily="@font/pretendard"
         android:drawableStart="@drawable/popularity_rank"
         android:drawableTint="@color/myCelebThinPink"
         android:layout_width="wrap_content"
@@ -73,6 +77,8 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/rankItemTrash"
         android:text="3875"
+        android:textSize="15sp"
+        android:fontFamily="@font/pretendard"
         android:drawablePadding="5dp"
         android:drawableEnd="@drawable/circle"
         android:layout_width="wrap_content"
