--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginEnd="18dp"
-                app:tint="#C6C9D0" />
+                app:tint="@color/black" />
 
             <ImageView
                 android:id="@+id/alarmBtn"
@@ -63,6 +63,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:contentDescription="Logo"
+                android:tint="@color/black"
                 android:src="@drawable/alarm" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
