--- a/app/src/main/res/layout/community_item.xml
+++ b/app/src/main/res/layout/community_item.xml
@@ -1,85 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/rounded_box_shape"
-    android:layout_marginBottom="10dp"
-    android:paddingStart="20dp"
-    android:paddingEnd="20dp"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/communityItemProfile"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+<layout>
+    <data>
+        <variable
+            name="celebName"
+            type="String" />
+        <variable
+            name="celebNameContent"
+            type="String" />
+        <variable
+            name="celebNameTag"
+            type="String" />
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:background="@drawable/rounded_box_shape"
-        app:layout_constraintHorizontal_chainStyle="spread"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/communityItemLayout"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_marginBottom="10dp"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/communityItemProfile"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            app:cardCornerRadius="10dp"
+            app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/communityItemLayout"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/communityCelebIv"
+                android:scaleType="fitXY"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/communityItemLayout"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="15dp"
+            app:layout_constraintStart_toEndOf="@+id/communityItemProfile"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/communityItemBtn"
+            android:orientation="vertical">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/celebNameTv"
+                android:text="@{celebName}"
+                android:hint="celebName"
+                android:textColor="@color/myCelebTextHint"
+                android:fontFamily="@font/pretendard_medium"
+                android:textSize="18sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/celebNameContentTv"
+                android:layout_marginTop="8dp"
+                android:text="@{celebNameTag}"
+                android:hint="정국한테 치인 사람 다 모여라!"
+                android:maxLines="1"
+                android:fontFamily="@font/pretendard_medium"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/celebNameTagTv"
+                android:text="#국이 덕질에 진심인 사람들의 모임"
+                android:maxLines="1"
+                android:fontFamily="@font/pretendard_medium"
+                android:textColor="@color/myCelebTextHint"
+                android:textSize="15sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/communityItemBtn"
+            android:background="@drawable/baseline_keyboard_arrow_right_24"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@+id/communityItemLayout"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/communityItemLayout"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginStart="15dp"
-        app:layout_constraintStart_toEndOf="@+id/communityItemProfile"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/communityItemBtn"
-        android:orientation="vertical">
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/celebName"
-            android:text="정국"
-            android:textColor="@color/myCelebTextHint"
-            android:fontFamily="@font/pretendard_medium"
-            android:textSize="18sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/celebNameContent"
-            android:layout_marginTop="8dp"
-            android:text="정국한테 치인 사람 다 모여라!"
-            android:fontFamily="@font/pretendard_medium"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/celebNameTag"
-            android:text="#국이 덕질에 진심인 사람들의 모임"
-            android:fontFamily="@font/pretendard_medium"
-            android:textColor="@color/myCelebTextHint"
-            android:textSize="15sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/communityItemBtn"
-        android:background="@drawable/baseline_keyboard_arrow_right_24"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@+id/communityItemLayout"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
