--- a/app/src/main/res/layout/fragment_community_home.xml
+++ b/app/src/main/res/layout/fragment_community_home.xml
@@ -1,126 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="20dp"
-    tools:context=".community.CommunityHomeFragment">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/communityInfo"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/rounded_box_shape"
-        android:backgroundTint="@color/myCelebPurple"
+<layout>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:padding="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/communityTxt1">
+        tools:context=".community.CommunityHomeFragment">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/communityInfo"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/rounded_box_shape"
+            android:backgroundTint="@color/myCelebPurple"
+            android:padding="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/communityTxt1">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/communityTxt3"
+                android:textSize="15sp"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:fontFamily="@font/pretendard_medium"
+                app:layout_constraintVertical_bias="0"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/other_celeb" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/communityTxt4"
+                android:textSize="12sp"
+                android:textColor="@color/white"
+                app:layout_constraintHorizontal_bias="0"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/other_celeb2"
+                android:fontFamily="@font/pretendard_medium"
+                android:layout_marginTop="5dp"
+                app:layout_constraintTop_toBottomOf="@+id/communityTxt3"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/speech_bubble"
+                app:layout_constraintHorizontal_bias="1"
+                app:layout_constraintStart_toEndOf="@+id/communityTxt4"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/communityTxt3"
-            android:textSize="15sp"
-            android:textColor="@color/white"
+            android:id="@+id/communityTxt1"
+            android:text="*인기 커뮤니티"
+            android:textSize="18sp"
             android:textStyle="bold"
             android:fontFamily="@font/pretendard_medium"
-            app:layout_constraintVertical_bias="0"
-            app:layout_constraintHorizontal_bias="0"
+            android:layout_marginTop="20dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/communityInfo"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/other_celeb" />
+            app:layout_constraintBottom_toTopOf="@+id/communityCelebSearch"/>
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/communityTxt4"
-            android:textSize="12sp"
-            android:textColor="@color/white"
-            app:layout_constraintHorizontal_bias="0"
-            android:layout_width="wrap_content"
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/communityCelebSearch"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/other_celeb2"
-            android:fontFamily="@font/pretendard_medium"
-            android:layout_marginTop="5dp"
-            app:layout_constraintTop_toBottomOf="@+id/communityTxt3"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@drawable/rounded_search_shape"
+            android:backgroundTint="@color/myCelebBoxBackground"
+            app:queryBackground="@null"
+            android:layout_marginTop="10dp"
+            app:iconifiedByDefault="false"
+            app:queryHint="원하는 셀럽을 검색해봐요"
+            app:layout_constraintTop_toBottomOf="@+id/communityTxt1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/communityTxt2"
+            android:text="높은 참여율순"
+            android:textColor="@color/myCelebThinPink"
+            android:fontFamily="@font/pretendard_medium"
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/communityCelebSearch"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/speech_bubble"
-            app:layout_constraintHorizontal_bias="1"
-            app:layout_constraintStart_toEndOf="@+id/communityTxt4"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/baseline_keyboard_arrow_down_24"
+            android:tint="@color/myCelebThinPink"
+            android:layout_marginTop="10dp"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintTop_toBottomOf="@+id/communityCelebSearch"
+            app:layout_constraintStart_toEndOf="@+id/communityTxt2"
             app:layout_constraintEnd_toEndOf="parent"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/communityRecyclerView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toBottomOf="@+id/communityTxt2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:listitem="@layout/community_item"/>
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/communityTxt1"
-        android:text="*인기 커뮤니티"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:fontFamily="@font/pretendard_medium"
-        android:layout_marginTop="20dp"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/communityInfo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/communityCelebSearch"/>
-
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/communityCelebSearch"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rounded_search_shape"
-        android:backgroundTint="@color/myCelebBoxBackground"
-        app:queryBackground="@null"
-        android:layout_marginTop="10dp"
-        app:iconifiedByDefault="false"
-        app:queryHint="원하는 셀럽을 검색해봐요"
-        app:layout_constraintTop_toBottomOf="@+id/communityTxt1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/communityTxt2"
-        android:text="높은 참여율순"
-        android:textColor="@color/myCelebThinPink"
-        android:fontFamily="@font/pretendard_medium"
-        android:layout_marginTop="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/communityCelebSearch"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/baseline_keyboard_arrow_down_24"
-        android:tint="@color/myCelebThinPink"
-        android:layout_marginTop="10dp"
-        app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintTop_toBottomOf="@+id/communityCelebSearch"
-        app:layout_constraintStart_toEndOf="@+id/communityTxt2"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/communityTxt2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@layout/community_item"/>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
