#15 CommunityChat 관련 적용 완료, id값만 받아오기 하면 됨.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:contentDescription="Logo"
-                android:tint="@color/black"
+                app:tint="@color/black"
                 android:src="@drawable/alarm" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
