--- a/app/src/main/res/layout/fragment_community_chat.xml
+++ b/app/src/main/res/layout/fragment_community_chat.xml
@@ -37,7 +37,7 @@
             app:layout_constraintBottom_toBottomOf="parent">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/aiChatRecyclerView"
+                android:id="@+id/communityChatRv"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 app:layout_constraintTop_toTopOf="parent"
@@ -55,7 +55,7 @@
                 android:layout_alignParentBottom="true"
                 android:background="@color/myCelebChatBackground"
                 android:orientation="vertical"
-                app:layout_constraintTop_toBottomOf="@+id/aiChatRecyclerView"
+                app:layout_constraintTop_toBottomOf="@+id/communityChatRv"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent">
