#15.2 CommunityChat fragment->activity 변환 완료 -> 이전 rv에서 아이템 클릭 구현 해야 함.

--- a/app/src/main/res/layout/activity_community_chat.xml
+++ b/app/src/main/res/layout/activity_community_chat.xml
@@ -152,7 +152,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/rounded_box_shape"
                     android:backgroundTint="@color/myCelebHotPink"
-                    android:text="등록"
+                    android:text="등록ㄱㄱㄱ"
                     android:fontFamily="@font/pretendard_medium"
                     android:textColor="@android:color/white" />
 
