#17 앱 아이콘 변경, 랭킹 시스템 구축(마이 샐럽 랭킹 미구현, 변동 순위 미구현)

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -83,7 +83,7 @@
             app:layout_constraintBottom_toTopOf="@+id/tv2">
 
             <androidx.appcompat.widget.LinearLayoutCompat
-                android:id="@+id/celebChatBtn"
+                android:id="@+id/celebChatBtnLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -94,6 +94,7 @@
                 app:layout_constraintEnd_toStartOf="@+id/communityBtn">
 
                 <androidx.appcompat.widget.AppCompatImageButton
+                    android:id="@+id/celebChatBtn"
                     android:src="@drawable/chat_bot_btn"
                     android:backgroundTint="@color/white"
                     android:layout_width="78dp"
@@ -116,7 +117,7 @@
                 android:orientation="vertical"
                 android:gravity="center"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/celebChatBtn"
+                app:layout_constraintStart_toEndOf="@+id/celebChatBtnLayout"
                 app:layout_constraintEnd_toStartOf="@+id/audioBookLayout2">
 
                 <androidx.appcompat.widget.AppCompatImageButton
@@ -174,6 +175,7 @@
                 app:layout_constraintEnd_toEndOf="parent">
 
                 <androidx.appcompat.widget.AppCompatImageButton
+                    android:id="@+id/bt_rank"
                     android:src="@drawable/rank_btn"
                     android:backgroundTint="@color/white"
                     android:layout_width="78dp"
