--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -1,208 +1,221 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".main.view.RankingFragment">
-
+<layout>
+    <data>
+        <variable
+            name="celebName"
+            type="String" />
+        <variable
+            name="celebrityDescription"
+            type="String" />
+        <variable
+            name="celebrityRank"
+            type="String" />
+        <variable
+            name="celebrityRankMovement"
+            type="String" />
+    </data>
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/myCelebRankLayout1"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:background="@color/black"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <TextView
-            android:id="@+id/rankTxt1"
-            android:text="마이 셀럽 랭킹"
-            android:fontFamily="@font/pretendard_medium"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/celebProfile"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:src="@drawable/chaeunwoo"
-            app:tint="@color/black"
-            app:civ_border_width="2dp"
-            app:civ_border_color="@color/myCelebThinPink"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="15dp"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rankTxt1"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+        android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context=".main.view.RankingFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="0dp"
+            android:id="@+id/myCelebRankLayout1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toEndOf="@+id/celebProfile"
-            app:layout_constraintTop_toBottomOf="@id/rankTxt1"
+            android:padding="20dp"
+            android:background="@color/black"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/myCelebRank"
-                android:text="6위"
+            <TextView
+                android:id="@+id/rankTxt1"
+                android:text="마이 셀럽 랭킹"
                 android:fontFamily="@font/pretendard_medium"
-                android:textColor="@color/white"
-                android:textSize="15sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintHorizontal_bias="0"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/myCelebRankNum"/>
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/myCelebRankNum"
-                android:text="1"
-                android:textSize="15sp"
-                android:fontFamily="@font/pretendard_medium"
-                android:textColor="@color/myCelebHotPink"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:drawableStart="@drawable/popularity_rank"
-                android:drawableTint="@color/myCelebHotPink"
-                android:layout_marginStart="7dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/myCelebRank"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/myCelebName"/>
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/myCelebName"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="차은우"
-                android:fontFamily="@font/pretendard_medium"
-                android:textColor="@color/white"
-                android:textStyle="bold"
                 android:textSize="18sp"
-                app:layout_constraintHorizontal_bias="0"
-                app:layout_constraintTop_toBottomOf="@id/myCelebRank"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/myCelebNick"
-                android:text="#연하 #20대 #동안"
-                android:layout_width="0dp"
-                android:fontFamily="@font/pretendard_medium"
-                android:layout_height="wrap_content"
+                android:textStyle="bold"
                 android:textColor="@color/white"
-                android:textSize="15sp"
-                app:layout_constraintTop_toBottomOf="@+id/myCelebName"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:text="2543K"
-                android:fontFamily="@font/pretendard_medium"
-                android:drawableEnd="@drawable/circle"
-                android:textColor="@color/white"
-                android:drawablePadding="5dp"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_marginTop="10dp"
+                android:layout_height="wrap_content"
                 app:layout_constraintHorizontal_bias="0"
-                app:layout_constraintTop_toBottomOf="@+id/myCelebNick"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/celebProfile"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:src="@drawable/chaeunwoo"
+                app:tint="@color/black"
+                app:civ_border_width="2dp"
+                app:civ_border_color="@color/myCelebThinPink"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="15dp"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/rankTxt1"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toEndOf="@+id/celebProfile"
+                app:layout_constraintTop_toBottomOf="@id/rankTxt1"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/myCelebRank"
+                    android:text="@{celebrityRank}"
+                    android:fontFamily="@font/pretendard_medium"
+                    android:textColor="@color/white"
+                    android:textSize="15sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintHorizontal_bias="0"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/myCelebRankNum"/>
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/myCelebRankNum"
+                    android:text="@{celebrityRankMovement}"
+                    android:textSize="15sp"
+                    android:fontFamily="@font/pretendard_medium"
+                    android:textColor="@color/myCelebHotPink"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:drawableStart="@drawable/popularity_rank"
+                    android:drawableTint="@color/myCelebHotPink"
+                    android:layout_marginStart="7dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/myCelebRank"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/myCelebName"/>
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/myCelebName"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@{celebName}"
+                    android:fontFamily="@font/pretendard_medium"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:textSize="18sp"
+                    app:layout_constraintHorizontal_bias="0"
+                    app:layout_constraintTop_toBottomOf="@id/myCelebRank"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/myCelebNick"
+                    android:text="@{celebrityDescription}"
+                    android:layout_width="0dp"
+                    android:fontFamily="@font/pretendard_medium"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/white"
+                    android:textSize="15sp"
+                    app:layout_constraintTop_toBottomOf="@+id/myCelebName"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:text="2543K"
+                    android:fontFamily="@font/pretendard_medium"
+                    android:drawableEnd="@drawable/circle"
+                    android:textColor="@color/white"
+                    android:drawablePadding="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintHorizontal_bias="0"
+                    app:layout_constraintTop_toBottomOf="@+id/myCelebNick"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/myCelebRankLayout2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:padding="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/myCelebRankLayout1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/myCelebRankTxt1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="전체 랭킹"
-            android:fontFamily="@font/pretendard_medium"
-            android:textSize="21sp"
-            android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/communityCelebSearch"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rounded_search_shape"
-            android:backgroundTint="@color/myCelebBoxBackground"
-            app:queryBackground="@null"
-            android:layout_marginTop="10dp"
-            app:iconifiedByDefault="false"
-            app:queryHint="원하는 셀럽을 검색해봐요"
-            app:layout_constraintTop_toBottomOf="@+id/myCelebRankTxt1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-        <TextView
-            android:id="@+id/rankTxt2"
-            android:text="높은 점수순"
-            android:textSize="15sp"
-            android:textColor="@color/myCelebThinPink"
-            android:fontFamily="@font/pretendard_medium"
-            android:layout_marginTop="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/communityCelebSearch"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/baseline_keyboard_arrow_down_24"
-            android:tint="@color/myCelebThinPink"
-            android:layout_marginTop="10dp"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintTop_toBottomOf="@+id/communityCelebSearch"
-            app:layout_constraintStart_toEndOf="@+id/rankTxt2"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_celebRank"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/myCelebRankLayout2"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/rankTxt2"
+            android:padding="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/myCelebRankLayout1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:listitem="@layout/rank_item"/>
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/myCelebRankTxt1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="전체 랭킹"
+                android:fontFamily="@font/pretendard_medium"
+                android:textSize="21sp"
+                android:textStyle="bold"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/communityCelebSearch"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_search_shape"
+                android:backgroundTint="@color/myCelebBoxBackground"
+                app:queryBackground="@null"
+                android:layout_marginTop="10dp"
+                app:iconifiedByDefault="false"
+                app:queryHint="원하는 셀럽을 검색해봐요"
+                app:layout_constraintTop_toBottomOf="@+id/myCelebRankTxt1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <TextView
+                android:id="@+id/rankTxt2"
+                android:text="높은 점수순"
+                android:textSize="15sp"
+                android:textColor="@color/myCelebThinPink"
+                android:fontFamily="@font/pretendard_medium"
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/communityCelebSearch"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/baseline_keyboard_arrow_down_24"
+                android:tint="@color/myCelebThinPink"
+                android:layout_marginTop="10dp"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintTop_toBottomOf="@+id/communityCelebSearch"
+                app:layout_constraintStart_toEndOf="@+id/rankTxt2"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_celebRank"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@+id/rankTxt2"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:listitem="@layout/rank_item"/>
 
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
