--- a/app/src/main/res/layout/rank_item.xml
+++ b/app/src/main/res/layout/rank_item.xml
@@ -1,102 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/rankItemNum"
-        android:layout_width="wrap_content"
+<layout>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="21sp"
-        android:text="1"
-        android:fontFamily="@font/pretendard"
-        android:layout_marginStart="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/celebProfile"/>
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/celebProfile"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:src="@drawable/jeongguk"
-        app:tint="@color/black"
-        app:civ_border_color="#D7DAE3"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginBottom="15dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/rankItemNum"
-        app:layout_constraintEnd_toStartOf="@+id/rankItemLinearLayout1"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/rankItemLinearLayout1"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        android:gravity="center_vertical"
-        app:layout_constraintStart_toEndOf="@+id/celebProfile"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/rankItemVariance">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:text="정국"
-            android:fontFamily="@font/pretendard"
-            android:textSize="18sp"
-            android:textStyle="bold"
+            android:id="@+id/rankItemNum"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textSize="21sp"
+            android:text="1"
+            android:fontFamily="@font/pretendard"
+            android:layout_marginStart="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/celebProfile"/>
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/celebProfile"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/jeongguk"
+            app:tint="@color/black"
+            app:civ_border_color="#D7DAE3"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginBottom="15dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/rankItemNum"
+            app:layout_constraintEnd_toStartOf="@+id/rankItemLinearLayout1"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/rankItemLinearLayout1"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            android:gravity="center_vertical"
+            app:layout_constraintStart_toEndOf="@+id/celebProfile"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/rankItemVariance">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_celebName"
+                android:text="정국"
+                android:fontFamily="@font/pretendard"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_celebDescription"
+                android:text="#빌보드 #INFP #솔로"
+                android:textSize="15sp"
+                android:fontFamily="@font/pretendard"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:text="#빌보드 #INFP #솔로"
+            android:id="@+id/rankItemVariance"
+            android:text="1"
+            android:textSize="18sp"
+            android:fontFamily="@font/pretendard"
+            android:drawableStart="@drawable/popularity_rank"
+            android:drawableTint="@color/myCelebThinPink"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/myCelebThinPink"
+            app:layout_constraintStart_toEndOf="@+id/rankItemLinearLayout1"
+            app:layout_constraintEnd_toStartOf="@id/rankItemTrash"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/rankItemTrash"
+            android:text="3875"
             android:textSize="15sp"
             android:fontFamily="@font/pretendard"
+            android:drawablePadding="5dp"
+            android:drawableEnd="@drawable/circle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </androidx.appcompat.widget.LinearLayoutCompat>
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@+id/rankItemVariance"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/rankItemVariance"
-        android:text="1"
-        android:textSize="18sp"
-        android:fontFamily="@font/pretendard"
-        android:drawableStart="@drawable/popularity_rank"
-        android:drawableTint="@color/myCelebThinPink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/myCelebThinPink"
-        app:layout_constraintStart_toEndOf="@+id/rankItemLinearLayout1"
-        app:layout_constraintEnd_toStartOf="@id/rankItemTrash"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        <View
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginTop="15dp"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:background="@color/black"
+            app:layout_constraintTop_toBottomOf="@+id/celebProfile"/>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/rankItemTrash"
-        android:text="3875"
-        android:textSize="15sp"
-        android:fontFamily="@font/pretendard"
-        android:drawablePadding="5dp"
-        android:drawableEnd="@drawable/circle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@+id/rankItemVariance"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <View
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginTop="15dp"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="@color/black"
-        app:layout_constraintTop_toBottomOf="@+id/celebProfile"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
