--- a/app/src/main/res/layout/activity_community_chat.xml
+++ b/app/src/main/res/layout/activity_community_chat.xml
@@ -33,7 +33,7 @@
 
             <TextView
                 android:id="@+id/titleTxt"
-                android:text="홈"
+                android:text="커뮤니티"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:layout_width="wrap_content"
@@ -42,32 +42,6 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
-
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="10dp"
-                android:contentDescription="Logo"
-                android:src="@drawable/baseline_person_24"
-                app:layout_constraintEnd_toStartOf="@+id/alarmBtn"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginEnd="18dp"
-                app:tint="@color/black" />
-
-            <ImageView
-                android:id="@+id/alarmBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:contentDescription="Logo"
-                app:tint="@color/black"
-                android:src="@drawable/alarm" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.appcompat.widget.Toolbar>
 
@@ -77,8 +51,7 @@
         android:layout_height="60dp"
         android:src="@drawable/baseline_person_24"
         app:civ_border_width="2dp"
-        app:civ_border_color="#D7DAE3"
-        android:layout_marginTop="10dp"
+        app:civ_border_color="@color/myCelebThinPink"
         android:layout_marginBottom="15dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,6 +64,7 @@
         android:layout_height="0dp"
         android:background="@color/myCelebChatBackground"
         android:orientation="vertical"
+        android:backgroundTint="@color/myCelebBoxBackground"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/celebProfile"
@@ -113,7 +87,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:background="@color/myCelebChatBackground"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@+id/communityChatRv"
             app:layout_constraintStart_toStartOf="parent"
@@ -122,6 +95,7 @@
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/ll_layout_bar"
+                android:background="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -135,12 +109,13 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
                     android:paddingStart="15dp"
-                    android:layout_weight=".5"
+                    android:layout_weight=".4"
                     android:background="@drawable/rounded_box_shape"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@color/myCelebBoxBackground"
                     android:layout_gravity="center_vertical"
                     android:hint="매너를 지키되, 자유롭게 채팅해주세요!"
-                    android:textSize="14sp"
+                    android:textColorHint="@color/myCelebTextHint"
+                    android:textSize="12sp"
                     android:padding="10dp"
                     android:singleLine="true" />
 
@@ -149,10 +124,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="10dp"
-                    android:layout_weight="1"
+                    android:layout_weight="1.2"
                     android:background="@drawable/rounded_box_shape"
                     android:backgroundTint="@color/myCelebHotPink"
-                    android:text="등록ㄱㄱㄱ"
+                    android:text="등록"
                     android:fontFamily="@font/pretendard_medium"
                     android:textColor="@android:color/white" />
 
