--- a/app/src/main/res/layout/fragment_ai_chat.xml
+++ b/app/src/main/res/layout/fragment_ai_chat.xml
@@ -15,7 +15,7 @@
             android:src="@drawable/baseline_person_24"
             app:tint="@color/black"
             app:civ_border_width="2dp"
-            app:civ_border_color="@color/myCelebHotPink"
+            app:civ_border_color="@color/myCelebThinPink"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="15dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,12 +53,13 @@
                     android:id="@+id/aiChatDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="2023년 8월 29일 화요일"
+                    android:text="2023년 8월 24일 목요일"
+                    android:fontFamily="@font/pretendard_medium"
                     android:textColor="@color/myCelebTextHint"
-                    android:drawableStart="@drawable/baseline_calendar_today_24"
+                    android:drawableStart="@drawable/calender"
+                    android:drawablePadding="5dp"
                     android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
-                    android:textStyle="bold"/>
+                    android:layout_marginEnd="10dp"/>
             </androidx.appcompat.widget.LinearLayoutCompat>
 
             <androidx.recyclerview.widget.RecyclerView
@@ -115,15 +116,17 @@
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
-                        android:paddingStart="10dp"
+                        android:paddingStart="20dp"
+                        android:paddingTop="10dp"
+                        android:paddingEnd="10dp"
+                        android:paddingBottom="10dp"
                         android:layout_weight=".5"
                         android:background="@drawable/rounded_box_shape"
                         android:backgroundTint="@color/myCelebBoxBackground"
                         android:layout_gravity="center_vertical"
                         android:hint="셀럽과 자유롭게 대화해보세요..."
-                        android:textSize="14sp"
+                        android:textSize="12sp"
                         android:textColor="@color/myCelebTextHint"
-                        android:padding="10dp"
                         android:singleLine="true" />
 
                     <androidx.appcompat.widget.AppCompatButton
@@ -131,7 +134,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="10dp"
-                        android:layout_weight="1"
+                        android:layout_weight="1.1"
                         android:background="@drawable/rounded_box_shape"
                         android:backgroundTint="@color/myCelebHotPink"
                         android:text="전송"
