--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_homeFragment_to_rankingFragment"
             app:destination="@id/rankingFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_selectCelebFragment"
+            app:destination="@id/selectCelebFragment" />
     </fragment>
     <fragment
         android:id="@+id/aiChatFragment"
