--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="myCelebBoxBackground">#ECECF5</color>
     <color name="myCelebTextBlack">#111111</color>
     <color name="myCelebPurple">#A082F4</color>
+    <color name="myCelebWine">#6A0042</color>
 </resources>
