--- a/app/src/main/res/layout/fragment_audio_book.xml
+++ b/app/src/main/res/layout/fragment_audio_book.xml
@@ -25,7 +25,7 @@
             android:id="@+id/audioBookLayout1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="#5F6060"
+            android:background="@color/myCelebWine"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
