#19 전체 디자인 적용

--- a/app/src/main/res/layout/fragment_audio_book.xml
+++ b/app/src/main/res/layout/fragment_audio_book.xml
@@ -123,6 +123,7 @@
                 android:id="@+id/audioBookScriptRecyclerView"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:background="@drawable/book_background"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
