--- a/app/src/main/res/layout/audio_book_item.xml
+++ b/app/src/main/res/layout/audio_book_item.xml
@@ -15,8 +15,7 @@
         android:paddingTop="5dp"
         android:paddingStart="20dp"
         android:paddingEnd="20dp"
-        android:paddingBottom="5dp"
-        android:background="#C6C9D0">
+        android:paddingBottom="5dp">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/audioBookScript"
