--- a/app/src/main/res/layout/home_popular_item.xml
+++ b/app/src/main/res/layout/home_popular_item.xml
@@ -1,59 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginEnd="10dp">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+<layout>
+    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_marginEnd="10dp">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/popularImg"
-            android:layout_width="190dp"
-            android:layout_height="125dp"
-            android:background="@drawable/perfume"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/popularLayout2"/>
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/popularLayout2"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintHorizontal_bias="0"
-            app:layout_constraintTop_toBottomOf="@+id/popularImg"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+            android:layout_height="wrap_content">
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/popularTitleTxt"
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/popularImg"
+                android:layout_width="190dp"
+                android:layout_height="125dp"
+                android:background="@drawable/perfume"
+                android:scaleType="fitXY"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/popularLayout2"/>
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/popularLayout2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="*은우와 가장 어울리는 책은?"
-                android:fontFamily="@font/pretendard_medium"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="8dp"
-                android:textStyle="bold"
-                android:textSize="14sp"
-                android:textColor="@color/myCelebTextBlack" />
+                android:orientation="vertical"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintTop_toBottomOf="@+id/popularImg"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent">
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/popularTitleContent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="나만의 셀럽의 목소리와 가장\n맞는 책을 추천해요"
-                android:fontFamily="@font/pretendard_medium"
-                android:layout_marginStart="8dp"
-                android:layout_marginBottom="8dp"
-                android:textSize="12sp"
-                android:textColor="@color/myCelebTextHint" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/popularTitleTxt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="*은우와 가장 어울리는 책은?"
+                    android:fontFamily="@font/pretendard_medium"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginStart="8dp"
+                    android:textStyle="bold"
+                    android:textSize="14sp"
+                    android:textColor="@color/myCelebTextBlack" />
 
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/popularTitleContent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="나만의 셀럽의 목소리와 가장\n맞는 책을 추천해요"
+                    android:fontFamily="@font/pretendard_medium"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:textSize="12sp"
+                    android:textColor="@color/myCelebTextHint" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</com.google.android.material.card.MaterialCardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
+</layout>
