--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -183,18 +183,21 @@
                 android:textSize="15sp"
                 android:textColor="@color/myCelebThinPink"
                 android:fontFamily="@font/pretendard_medium"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/communityCelebSearch"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/rv_celebRank"/>
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/baseline_keyboard_arrow_down_24"
                 android:tint="@color/myCelebThinPink"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintTop_toBottomOf="@+id/communityCelebSearch"
                 app:layout_constraintStart_toEndOf="@+id/rankTxt2"
