--- a/app/src/main/res/layout/rank_item.xml
+++ b/app/src/main/res/layout/rank_item.xml
@@ -97,7 +97,7 @@
             android:layout_marginTop="15dp"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:background="@color/black"
+            android:background="#C6C9D0"
             app:layout_constraintTop_toBottomOf="@+id/celebProfile"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
